<resources>
    <string name="app_name">Photos_Android43</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_single_album_homepage">Album Name</string>
    <string-array name="album_options">
        <item>...</item>
        <item>Rename Album</item>
        <item>Delete Album</item>
    </string-array>

    <string-array name="tag_options">
        <item>Add Tag</item>
        <item> Delete Tag</item>
    </string-array>

    <string-array name="search_options">
        <item>Location</item>
        <item>Person</item>
    </string-array>

    <string name="title">Tag</string>
    <string name="fwdbtntxt">&gt;</string>
    <string name="backbtntxt">&lt;</string>
    <string name="desc">Slideshow display</string>
    <string name="searchBtnTxt">Search</string>
    <string name="albumOptionsPrompt">Select One:</string>
    <string name="searchTitleText">Search by Tags</string>
    <string name="tagValueName">Enter value of tag</string>
    <string name="addButtonName">+</string>
    <string name="tagsEnteredListHeader"><u>Tags you have entered: </u></string>
    <string name="searchButtonName">Search</string>
    <string name="deleteTagButtonText">X</string>
    <string name="deleteButtonText">Delete</string>
    <string name="moveButtonText">Move</string>

</resources>
