<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.photos_android.photos_android43.Slideshow">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="290dp"
        android:layout_height="340dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="18dp"
        android:layout_toEndOf="@+id/backwardBtn"
        android:contentDescription="@string/desc"
        app:srcCompat="@drawable/sample_7"
        />

    <Button
        android:id="@+id/backwardBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/imageView"
        android:layout_marginTop="141dp"
        android:background="@color/colorAccent"
        android:text="@string/backbtntxt"
        android:textSize="10sp"
        android:textStyle="bold" />
    <Button
        android:id="@+id/forwardBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="141dp"
        android:layout_alignBottom="@+id/backwardBtn"
        android:layout_alignParentEnd="true"
        android:text="@string/fwdbtntxt"
        android:textSize="9dp"
        android:textStyle="bold"/>

    <model.MySpinner
        android:id="@+id/tag_spinner"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tagInfo"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="11dp"
        android:layout_marginEnd="33dp"
        android:prompt="@string/title"/>

    <TextView
        android:id="@+id/tagInfo"
        android:layout_width="290dp"
        android:layout_height="90dp"
        android:layout_alignEnd="@+id/imageView"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        />


</RelativeLayout>
