<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.photos_android.photos_android43.SearchPage">

    <RelativeLayout
        android:id="@+id/relativeLayoutForSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:paddingBottom="5dp">

        <model.MySpinner
            android:id="@+id/searchOptions"
            android:layout_width="130dp"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/tagValue"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/searchOptions"
            android:text="@string/tagValueName"/>

        <Button
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tagValue"
            android:text="@string/addButtonName"
            android:textSize="14dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayoutForTags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/relativeLayoutForSearch"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/tagsEnteredList"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:text="@string/tagsEnteredListHeader"
            android:textSize="16dp"/>

        <Button
            android:id="@+id/searchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tagsEnteredList"
            android:text="@string/searchButtonName"
            android:visibility="invisible" />
    </RelativeLayout>

    <GridView
        android:id="@+id/searchedPhotos"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/relativeLayoutForTags"
        android:columnWidth="90dp"
        android:numColumns="auto_fit"
        android:verticalSpacing="10dp"
        android:horizontalSpacing="10dp"
        android:stretchMode="columnWidth"
        android:gravity="center">
    </GridView>

</RelativeLayout>
